--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,11 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  host: ec2-107-21-100-118.compute-1.amazonaws.com
+  database: ddh0mcd7iuocfa
+  username: hubwhfiiijxflw
+  password: CaGDfbU3epyVyn38lSvgHDKPEl
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,7 +20,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  host: ec2-107-21-100-118.compute-1.amazonaws.com
+  database: ddh0mcd7iuocfa
+  username: hubwhfiiijxflw
+  password: CaGDfbU3epyVyn38lSvgHDKPEl
+
